# RSS-AI

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TESTING.md
.github/workflows/: ci.yml
migrations/: 20240101000000_baseline.sql  20240102000000_domain_tables.sql  20240103000000_feed_http_cache.sql  20240104000000_article_word_count.sql
scripts/: sqlx-prepare.sh
src/: config.rs  db.rs  embeddings.rs  extractor.rs  feed.rs  lib.rs  linker.rs  main.rs  mcp.rs  query.rs  scheduler.rs  search.rs  tagger.rs  vector.rs
src/db/: articles.rs  feeds.rs  links.rs  mod.rs  models.rs  tags.rs
src/embeddings/: client.rs  client_tests.rs  error.rs  mod.rs  pipeline.rs  pipeline_tests.rs  text.rs  text_tests.rs  types.rs
src/test_utils/: config.rs  db.rs  fixtures.rs  mock_http.rs  mock_llm.rs  mod.rs
src/vector/: error.rs  hybrid.rs  hybrid_tests.rs  index.rs  index_tests.rs  mod.rs  types.rs
tests/: config_integration.rs
tests/fixtures/config/: test_config.toml
tests/fixtures/html/: blog_post.html  minimal.html  news_article.html  paywall_article.html  technical_article.html
tests/fixtures/llm/: embedding_response.json  error_response.json  tag_response.json
tests/fixtures/rss/: atom_valid.xml  rss_empty.xml  rss_malformed.xml  rss_valid.xml
