[package]
name = "rss_ai"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate"] }
tantivy = "0.25"
reqwest = { version = "0.13", features = ["json"] }
feed-rs = "2.3"
scraper = "0.25"
html2text = "0.16"
hnsw_rs = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
